2003-07-02  Jeff Law  <law@redhat.com>
 
	* expr.c (do_store_flag): Remove special case folding for
	single bit tests.  Instead call back into the commonized folder
	routine.
	* fold-const.c (fold_single_bit_test): New function, mostly
	extracted from do_store_flag, with an additional case extracted
	from fold.
	(fold): Call fold_single_bit_test appropriately.
	* tree.h (fold_single_bit_test): Prototype.

2003-07-01  Jeff Law  <law@redhat.com>
 
	* stmt.c (any_pending_cleanups): Remove another redundant test.

2003-06-30  Jeff Law  <law@redhat.com>
 
	* stmt.c (any_pending_cleanups): Lose argument THIS_CONTOUR, it
	was always passed in the value '1'.  Simplify body appropriately.
	* tree.h (any_pending_cleanups): Corresponding changes.
	* calls.c: (expand_call): Corresponding changes.

2003-06-30  Jason Merrill  <jason@redhat.com>

	* defaults.h (PUSH_ARGS_REVERSED): Define default here.
	* calls.c: Not here.

2003-06-09  Jason Merrill  <jason@redhat.com>

	* fold-const.c (operand_equal_p): Handle ADDR_EXPR and TRUTH_NOT_EXPR.

2003-06-06  Jason Merrill  <jason@redhat.com>

	* fold-const.c (operand_equal_p): Handle ADDR_EXPR and
	TRUTH_NOT_EXPR.

	* stmt.c (resolve_asm_operand_names): Rename from
	resolve_operand_names.  No longer static.  Avoid needless copying.
	Don't build array of constraints.
	(expand_asm_operands): Build it here.
	* tree.h: Declare resolve_asm_operand_names.

	* stmt.c (expand_decl): Put artificial vars into registers even
	when not optimizing, and don't mark the regs as user vars.

2003-05-24  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (save_fpregs_{si,di}): Add length attribute.

2003-05-24  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config/rs6000/440.md, config/stormy16/stormy16protos.h,
	config/stormy16/stormy16.c, config/stormy16/stormy16.md:
	Replace "GNU CC" with "GCC".

2003-05-24  Matt Kraai  <kraai@alumni.cmu.edu>

	* builtins.c (expand_builtin_memcpy): Use mode of dest_addr for
	intermediate computation.
