@@ -1,3 +1,10 @@
+2003-07-04  Jeff Law  <law@redhat.com>
+ 
+	* expr.c (do_store_flag): Pass in the correct result type
+	when calling fold_single_bit_test.
+	* fold-const.c (fold_single_bit_test): Use result_type for the
+	result when folding a sign bit test.
+
 2003-07-02  Jeff Law  <law@redhat.com>
  
 	* expr.c (do_store_flag): Remove special case folding for
